--- a/src/python/grapl-python-build/Dockerfile
+++ b/src/python/grapl-python-build/Dockerfile
@@ -6,6 +6,6 @@ RUN adduser --disabled-password --gecos '' --home /home/grapl --shell /bin/bash 
 USER grapl
 ENV USER grapl
 WORKDIR /home/grapl
-RUN python -mvenv venv
+RUN python3 -mvenv venv
 RUN /bin/bash -c "source venv/bin/activate && pip install --upgrade pip"
 RUN /bin/bash -c "source venv/bin/activate && pip install wheel grpcio chalice"
