--- a/src/rust/Dockerfile
+++ b/src/rust/Dockerfile
@@ -127,16 +127,16 @@ COPY --chown=grapl Cargo.toml .
 # build everything
 # FIXME: cargo test instead of cargo build once the tests work
 RUN cargo build --target=x86_64-unknown-linux-musl
-# Now do a clean release build
+# now do a clean release build
 RUN if test "${release_target}" = "release"; then \
       cargo clean; \
       cargo build --target=x86_64-unknown-linux-musl --release; \
     fi
-# Move artifacts to dist mount
+# copy artifacts to dist mount
 RUN mkdir -p /home/grapl/dist && \
-    mv target/x86_64-unknown-linux-musl/${release_target}/analyzer-dispatcher dist/analyzer-dispatcher && \
-    mv target/x86_64-unknown-linux-musl/${release_target}/generic-subgraph-generator dist/generic-subgraph-generator && \
-    mv target/x86_64-unknown-linux-musl/${release_target}/graph-merger dist/graph-merger && \
-    mv target/x86_64-unknown-linux-musl/${release_target}/node-identifier dist/node-identifier && \
-    mv target/x86_64-unknown-linux-musl/${release_target}/node-identifier-retry-handler dist/node-identifier-retry-handler && \
-    mv target/x86_64-unknown-linux-musl/${release_target}/sysmon-subgraph-generator dist/sysmon-subgraph-generator \
+    cp target/x86_64-unknown-linux-musl/${release_target}/analyzer-dispatcher dist/analyzer-dispatcher && \
+    cp target/x86_64-unknown-linux-musl/${release_target}/generic-subgraph-generator dist/generic-subgraph-generator && \
+    cp target/x86_64-unknown-linux-musl/${release_target}/graph-merger dist/graph-merger && \
+    cp target/x86_64-unknown-linux-musl/${release_target}/node-identifier dist/node-identifier && \
+    cp target/x86_64-unknown-linux-musl/${release_target}/node-identifier-retry-handler dist/node-identifier-retry-handler && \
+    cp target/x86_64-unknown-linux-musl/${release_target}/sysmon-subgraph-generator dist/sysmon-subgraph-generator \
