mark dobi-linux binary executable

--- a/.github/workflows/grapl-release.yml
+++ b/.github/workflows/grapl-release.yml
@@ -70,6 +70,7 @@ jobs:
       - name: Install dobi
         run: |
           wget https://github.com/dnephin/dobi/releases/download/v0.13.0/dobi-linux
+          chmod +x dobi-linux
 
       - name: Build Grapl
         env:
