run python unit tests in builds

--- a/src/python/grapl-python-build/Dockerfile
+++ b/src/python/grapl-python-build/Dockerfile
@@ -8,4 +8,4 @@ ENV USER grapl
 WORKDIR /home/grapl
 RUN python3 -mvenv venv
 RUN /bin/bash -c "source venv/bin/activate && pip install --upgrade pip"
-RUN /bin/bash -c "source venv/bin/activate && pip install wheel grpcio chalice"
+RUN /bin/bash -c "source venv/bin/activate && pip install wheel grpcio chalice hypothesis pytest pytest-xdist"
