--- a/src/python/analyzer_executor/Dockerfile
+++ b/src/python/analyzer_executor/Dockerfile
@@ -6,9 +6,8 @@ COPY --from=grapl/grapl-analyzerlib-python-build /home/grapl/venv venv
 # RUN python setup.py test
 RUN /bin/bash -c "source venv/bin/activate && cd analyzer_executor && pip install ."
 RUN cd venv/lib/python3.7/site-packages/ && zip --quiet -9r ~/lambda.zip ./
-RUN cd analyzer_executor/src/ && zip -g ~/lambda.zip ./analyzer_executor.py
-
-RUN mkdir -p dist/analyzer-executor && cp lambda.zip dist/analyzer-executor/lambda.zip
+RUN cd analyzer_executor/src/ && zip -g ~/lambda.zip ./analyzer-executor.py
+RUN mkdir -p dist/analyzer_executor && cp ~/lambda.zip dist/analyzer_executor/lambda.zip
 
 FROM grapl/grapl-python-deploy AS grapl-analyzer-executor
 USER grapl
