--- a/src/js/engagement_view/package.json
+++ b/src/js/engagement_view/package.json
@@ -16,6 +16,7 @@
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-sidebar": "^3.0.0",
+    "@types/yup": "^0.29.3",
     "d3": "^5.15.1",
     "debug": "^2.6.9",
     "formik": "^2.1.4",
