added yup package

--- a/src/js/engagement_view/package.json
+++ b/src/js/engagement_view/package.json
@@ -30,7 +30,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.0",
     "semantic-ui-react": "^0.88.2",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "yup": "^0.29.1"
   },
   "scripts": {
     "start": "react-scripts start",
