--- a/src/python/engagement_edge/Dockerfile
+++ b/src/python/engagement_edge/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /home/grapl
 COPY --chown=grapl . engagement_edge
 COPY --from=grapl/grapl-analyzerlib-python-build /home/grapl/venv venv
 RUN /bin/bash -c "source venv/bin/activate && cd engagement_edge && pip install ."
-RUN /bin/bash -c "source venv/bin/activate && py.test -m 'not integration_test'"
+RUN /bin/bash -c "source venv/bin/activate && py.test -n auto -m 'not integration_test'"
 RUN cd venv/lib/python3.7/site-packages/ && zip --quiet -9r ~/lambda.zip ./
 RUN cd engagement_edge/src/ && zip -g ~/lambda.zip ./engagement_edge.py
 RUN mkdir -p dist/engagement-edge && cp lambda.zip dist/engagement-edge/lambda.zip
