--- a/src/python/grapl-dgraph-ttl/Dockerfile
+++ b/src/python/grapl-dgraph-ttl/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /home/grapl
 COPY --chown=grapl . ./grapl-dgraph-ttl
 COPY --from=grapl/grapl-analyzerlib-python-build /home/grapl/venv venv
 RUN /bin/bash -c "source venv/bin/activate && pip install -r grapl-dgraph-ttl/requirements.txt"
-RUN /bin/bash -c "source venv/bin/activate && py.test -m 'not integration_test'"
+RUN /bin/bash -c "source venv/bin/activate && py.test -n auto -m 'not integration_test'"
 RUN cd venv/lib/python3.7/site-packages && zip --quiet -9r ../../../../lambda.zip .
 RUN cd grapl-dgraph-ttl && zip -g ../lambda.zip app.py
 RUN mkdir -p dist/grapl-dgraph-ttl && cp lambda.zip dist/grapl-dgraph-ttl/lambda.zip
