make rust integration tests run

--- a/dobi.yaml
+++ b/dobi.yaml
@@ -348,12 +348,25 @@ job=build-rust:
 job=run-node-identifier-integration-tests:
   use: rust-build
   net-mode: grapl-integration-tests_default
-  command: "sleep 30 && cargo test --target=x86_64-unknown-linux-musl --manifest-path node-identifier/Cargo.toml --features integration"
+  command: /bin/bash -c "sleep 30 && cargo test --target=x86_64-unknown-linux-musl --manifest-path node-identifier/Cargo.toml --features integration"
   env:
-    - GRAPL_LOG_LEVEL=TRACE
+    - GRAPL_LOG_LEVEL=DEBUG
+    - RUST_LOG=DEBUG
+    - RUST_BACKTRACE=1
     - "BUCKET_PREFIX=local-grapl"
     - "IS_LOCAL=True"
     - "MG_ALPHAS=grapl-master-graph-db:9080"
+    - "SOURCE_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-node-identifier-retry-queue"
+    - "GRAPH_MERGER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-graph-merger-queue"
+    - STATIC_MAPPING_TABLE=local-grapl-static_mapping_table
+    - DYNAMIC_SESSION_TABLE=local-grapl-dynamic_session_table
+    - PROCESS_HISTORY_TABLE=local-grapl-process_history_table
+    - FILE_HISTORY_TABLE=local-grapl-file_history_table
+    - INBOUND_CONNECTION_HISTORY_TABLE=local-grapl-inbound_connection_history_table
+    - OUTBOUND_CONNECTION_HISTORY_TABLE=local-grapl-outbound_connection_history_table
+    - NETWORK_CONNECTION_HISTORY_TABLE=local-grapl-network_connection_history_table
+    - IP_CONNECTION_HISTORY_TABLE=local-grapl-ip_connection_history_table
+    - ASSET_ID_MAPPINGS=local-grapl-asset_id_mappings
   depends:
     - rust-build
     - integration-env
